# Machine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DATA.py  LICENSE  README.md  codegen.py  codegen.sh
codegen/C/: define.c  define.h  encoding.c  encoding.h  generate.c  generate.h  source.c  source.h  static.c  static.h
codegen/C/template/: encoding.c.tpl  machine.c.tpl
grammar/: action-table.h  char_t.h  codegen.h  context.c  context.h  enum.h  parse.c  parse.h  reduce.c  semantic.c  semantic.h  string_t.c  string_t.h  target.c  target.h  terminal.h  tokenize.c  tokenize.c.dep  tokenize.h
script/: DATA.py  codegen.py
template/: action-table.c.tpl  action-table.h.tpl  reduce.h.tpl  target.c.tpl  terminal.c.tpl  tokens.c.tpl  tokens.h.tpl
test/: debug.c  test-tokenize.c
test/tokenize/: test-identifier.c  test-keywords.c  test-number.c  test-symbols.c  test-tokenize.h  test-united.c
